# Agent-1Kafu

./: .env.example  .gitignore  README.md  pyproject.toml  task.md
docs/: Agent.md  RAG设计.md  接口设计.md  项目总体说明.md
scripts/: build_index.py  evaluate_retrieval.py  generate_submission.py  run_api.py
src/kefu_agent/: api.py  config.py  graph.py  memory.py  prompts.py  rag.py
tests/: test_api.py  test_config.py  test_evaluate_retrieval.py  test_graph.py  test_rag.py  test_submission_format.py
